# task_management_fastapi_microservices

./: docker-compose.yml
codebase/: docker-compose.yml
codebase/fastapi_backend/: .dockerignore  Dockerfile  pyproject.toml
codebase/fastapi_backend/fastapi_backend/: OAuth2_logic.py  db.py  main.py
fastapi_backend/: Dockerfile  db_cred.txt  pyproject.toml
fastapi_backend/fastapi_backend/: db.py  kafka_logic.py  main.py  models.py
