[tool.poetry]
name = "fastapi_backend"
version = "0.1.0"
description = ""
authors = ["Ahmed Naseem <ahmednaseem@esparkconsultants.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
requests = "^2.32.2"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
