[tool.poetry]
name = "fastapi_backend"
version = "0.1.0"
description = ""
authors = ["Ahmed Naseem <ahmednaseem@esparkconsultants.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
requests = "^2.32.2"
pydantic = "^2.7.1"
sqlmodel = "^0.0.19"
psycopg-binary = "^3.1.19"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
